apps/immich/immich-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    argocd.argoproj.io/managed-by: argocd
